[gd_scene load_steps=10 format=3 uid="uid://ca7uhep8t0n42"]

[ext_resource type="Script" path="res://Scripts/goToMultipleChoiceTask.gd" id="1_uds1q"]
[ext_resource type="Texture2D" uid="uid://3d0w3grncesh" path="res://quistion and task UI/Frage Fenster2.0.png" id="2_hbicu"]
[ext_resource type="Texture2D" uid="uid://dsoy0amqjs3c8" path="res://resources/Game-Task-and-Questions/islands/Inseln-Grundlagen.svg" id="2_obc6n"]
[ext_resource type="Texture2D" uid="uid://b6t5mnqe67otf" path="res://resources/1.Szene(Story)/Button 1.Szene.svg" id="3_qu2ob"]
[ext_resource type="Texture2D" uid="uid://c4afseew7s0g7" path="res://resources/Game UI Design/pause menu/pause.png" id="5_f5ac5"]
[ext_resource type="PackedScene" uid="uid://cu2sqwh1j3cby" path="res://Scenes/pause_menu.tscn" id="6_m5qi8"]
[ext_resource type="Texture2D" uid="uid://b7mnwsm32dirc" path="res://resources/Game UI Design/pause menu/backToIslands.png" id="7_afi21"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6mo8p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yget6"]

[node name="ereignisse" type="Node2D"]
script = ExtResource("1_uds1q")

[node name="background" type="TextureRect" parent="."]
offset_left = -172.0
offset_top = -28.0
offset_right = 1328.0
offset_bottom = 1472.0
scale = Vector2(0.989114, 0.483818)

[node name="Islands" type="TextureRect" parent="."]
offset_left = 318.926
offset_top = 22.3707
offset_right = 1818.93
offset_bottom = 1522.37
scale = Vector2(0.459595, 0.412328)
texture = ExtResource("2_obc6n")

[node name="FrageFenster2_0" type="Sprite2D" parent="."]
position = Vector2(573, 322)
scale = Vector2(1.29565, 1.28938)
texture = ExtResource("2_hbicu")

[node name="explanation_text" type="TextEdit" parent="."]
offset_left = 157.0
offset_top = 180.0
offset_right = 886.0
offset_bottom = 377.0
text = "
Ereignisse sind wie verschiedene Möglichkeiten bei einem Spiel:
1.	Verschiedene Ergebnisse: Stell dir vor, du spielst ein Spiel. Ein Ereignis ist einfach eine Möglichkeit oder ein Ergebnis, das passieren kann. Zum Beispiel beim Werfen einer Münze können die Ereignisse \"Kopf\" oder \"Zahl\" sein.
2.	Teil eines Experiments: Ein Ereignis tritt als Ergebnis eines Experiments oder einer Aktion auf. Wenn du zum Beispiel einen Würfel wirfst, könnten die Ereignisse \"eine gerade Zahl würfeln\" oder \"eine ungerade Zahl würfeln\" sein.
3.	Mehrere Ereignisse: Manchmal gibt es mehrere Ereignisse, die eintreten könnten. Zum Beispiel könnten beim Ziehen einer Karte aus einem Kartenspiel die Ereignisse \"eine rote Karte ziehen\" oder \"eine Herz-Karte ziehen\" sein.
4.	Wahrscheinlichkeit eines Ereignisses: Die Wahrscheinlichkeit eines Ereignisses ist ein Maß dafür, wie wahrscheinlich es ist, dass dieses Ereignis eintritt. Es kann als Zahl zwischen 0 und 1 ausgedrückt werden.
5.	Beispiele aus dem Alltag: Ereignisse können in vielen alltäglichen Situationen gefunden werden, wie z.B. das Wettervorhersagen (\"Regen\" oder \"Sonnenschein\") oder das Ergebnis eines Sportspiels (\"Sieg\" oder \"Niederlage\").
"
placeholder_text = "here text"
scroll_fit_content_height = true

[node name="DoneButton" type="TextureButton" parent="."]
offset_left = 409.0
offset_top = 395.0
offset_right = 993.0
offset_bottom = 562.0
scale = Vector2(0.471238, 0.724721)
size_flags_vertical = 8
texture_normal = ExtResource("3_qu2ob")
ignore_texture_size = true

[node name="Label" type="Label" parent="DoneButton"]
layout_mode = 0
offset_left = 167.643
offset_top = 68.9921
offset_right = 240.643
offset_bottom = 123.992
scale = Vector2(2.67291, 1.15257)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "done"

[node name="Pause" type="Button" parent="."]
offset_left = 1076.0
offset_top = 10.0
offset_right = 1194.0
offset_bottom = 128.0
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = SubResource("StyleBoxEmpty_6mo8p")
icon = ExtResource("5_f5ac5")

[node name="PauseMenu" parent="." instance=ExtResource("6_m5qi8")]
visible = false

[node name="BackToIslands" type="Button" parent="."]
offset_left = 1076.0
offset_top = 83.0
offset_right = 1194.0
offset_bottom = 201.0
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = SubResource("StyleBoxEmpty_yget6")
icon = ExtResource("7_afi21")

[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="BackToIslands" to="." method="_on_back_to_islands_pressed"]
